Fixed the download links for profiler and zip files

--- a/ai/DeepStream_Perf_Lab/English/python/jupyter_notebook/Performance_Analysis_using_NSight_systems.ipynb
+++ b/ai/DeepStream_Perf_Lab/English/python/jupyter_notebook/Performance_Analysis_using_NSight_systems.ipynb
@@ -156,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Click Here](../source_code/reports/report1.qdrep) to download the report file.\n",
+    "Download and save the report file by holding down <mark>Shift</mark> and <mark>Right-Clicking</mark> [Here](../source_code/reports/report1.qdrep) .\n",
     "\n",
     "Opening the above in NSight Compute we can notice that Stream Muxer is the key bottleneck and the pipeline is waiting for the Muxer to finish. \n",
     "\n",
@@ -262,7 +262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Click Here](../source_code/reports/report2.qdrep) to download the report file.\n",
+    "Download and save the report file by holding down <mark>Shift</mark> and <mark>Right-Clicking</mark> [Here](../source_code/reports/report2.qdrep)\n",
     "\n",
     "Let us now open this in NSight systems and view it.\n",
     "\n",
@@ -350,7 +350,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Click Here](../source_code/reports/report3.qdrep) to download the report file.\n",
+    "Download and save the report file by holding down <mark>Shift</mark> and <mark>Right-Clicking</mark> [Here](../source_code/reports/report3.qdrep)\n",
     "\n",
     "Let us now download and open the NSight systems report to review it.\n",
     "\n",
@@ -504,7 +504,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
