--- a/hpc/miniprofiler/English/C/jupyter_notebook/profiling-c-lab5.ipynb
+++ b/hpc/miniprofiler/English/C/jupyter_notebook/profiling-c-lab5.ipynb
@@ -205,7 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Download the profiler output](../source_code/lab5/miniWeather_5.qdrep) and open it via the Nsight System UI. From the timeline view, inspect the less efficient kernel.\n",
+    "Download and save the report file by holding down <mark>Shift</mark> and <mark>Right-Clicking</mark> [Here](../source_code/lab5/miniWeather_5.qdrep) and open it via the Nsight System UI. From the timeline view, inspect the less efficient kernel.\n",
     "\n",
     "<img src=\"images/cexer5.png\">\n",
     "\n",
@@ -234,7 +234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Download the profiler output](../source_code/lab5/miniWeather1.ncu-rep) and open it via the Nsight Compute UI. This tool has a lot of sections that focuses on different areas of the GPU and presents them all in one page. Inspect these sections, then click on the \"Apply Rules\" to check the bottlenecks. As you can see from the example output below, Nsight Compute profiler suggests to look at the \"Launch Statistics\" section because the kernel grid is too small to fill the available resources on the GPU.\n",
+    "Download and save the report file by holding down <mark>Shift</mark> and <mark>Right-Clicking</mark> [Here](../source_code/lab5/miniWeather1.ncu-rep) and open it via the Nsight Compute UI. This tool has a lot of sections that focuses on different areas of the GPU and presents them all in one page. Inspect these sections, then click on the \"Apply Rules\" to check the bottlenecks. As you can see from the example output below, Nsight Compute profiler suggests to look at the \"Launch Statistics\" section because the kernel grid is too small to fill the available resources on the GPU.\n",
     "\n",
     "<img src=\"images/ccompute.png\">\n",
     "\n",
@@ -267,7 +267,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Download the profiler output](../source_code/lab5/miniWeather2.ncu-rep) and open it via the Nsight Compute UI. \n",
+    "Download and save the report file by holding down <mark>Shift</mark> and <mark>Right-Clicking</mark> [Here](../source_code/lab5/miniWeather2.ncu-rep) and open it via the Nsight Compute UI. \n",
     "\n",
     "**Diff the reports**\n",
     "\n",
@@ -305,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**After** executing the above zip command, you should be able to download the zip file [here](../openacc_profiler_files.zip)."
+    "**After** executing the above zip command, you should be able to download and save the zip file by holding down <mark>Shift</mark> and <mark>Right-Clicking</mark> [Here](../openacc_profiler_files.zip)."
    ]
   },
   {
@@ -360,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
