--- a/ai/DeepStream_Perf_Lab/English/python/jupyter_notebook/Performance_Analysis_using_NSight_systems_Continued.ipynb
+++ b/ai/DeepStream_Perf_Lab/English/python/jupyter_notebook/Performance_Analysis_using_NSight_systems_Continued.ipynb
@@ -609,7 +609,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Click Here](../source_code/reports/report4.qdrep) to download the report file.\n",
+    "Download and save the report file by holding down <mark>Shift</mark> and <mark>Right-Clicking</mark> [Here](../source_code/reports/report4.qdrep)\n",
     "\n",
     "![report4](images/report4.PNG)\n",
     "\n",
@@ -655,7 +655,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Click Here](../source_code/reports/report5.qdrep) to download the report file.\n",
+    "Download and save the report file by holding down <mark>Shift</mark> and <mark>Right-Clicking</mark> [Here](../source_code/reports/report5.qdrep)\n",
     "\n",
     "![report5](images/report5.PNG)\n",
     "\n",
@@ -768,7 +768,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
