--- a/hpc/miniprofiler/English/C/jupyter_notebook/profiling-c-lab4.ipynb
+++ b/hpc/miniprofiler/English/C/jupyter_notebook/profiling-c-lab4.ipynb
@@ -90,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Download the profiler output](../source_code/lab4/miniWeather_5.qdrep) and open it via the GUI. Have a look at the example expected output below:\n",
+    "Download and save the report file by holding down <mark>Shift</mark> and <mark>Right-Clicking</mark> [Here](../source_code/lab4/miniWeather_5.qdrep) and open it via the GUI. Have a look at the example expected output below:\n",
     "\n",
     "<img src=\"images/nsys_fast_mv.png\">\n",
     "\n",
@@ -124,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**After** executing the above zip command, you should be able to download the zip file [here](../openacc_profiler_files.zip)."
+    "**After** executing the above zip command, you should be able to download and save the zip file by holding down <mark>Shift</mark> and <mark>Right-Clicking</mark> [Here](../openacc_profiler_files.zip)"
    ]
   },
   {
@@ -179,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
