--- a/hpc/miniprofiler/English/Fortran/jupyter_notebook/profiling-fortran-lab1.ipynb
+++ b/hpc/miniprofiler/English/Fortran/jupyter_notebook/profiling-fortran-lab1.ipynb
@@ -129,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**After** executing the above zip command, you should be able to download the zip file [here](../openacc_profiler_files.zip)."
+    "**After** executing the above zip command, you should be able to download and save the zip file by holding down <mark>Shift</mark> and <mark>Right-Clicking</mark> [Here](../openacc_profiler_files.zip)."
    ]
   },
   {
@@ -184,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
