--- a/hpc/openacc/English/C/jupyter_notebook/openacc_c_lab3.ipynb
+++ b/hpc/openacc/English/C/jupyter_notebook/openacc_c_lab3.ipynb
@@ -377,7 +377,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**After** executing the above zip command, you should be able to download the zip file [here](../openacc_files.zip)\n",
+    "**After** executing the above zip command, you should be able to download and save the zip file by holding down <mark>Shift</mark> and <mark>Right-Clicking</mark> [Here](../openacc_files.zip)\n",
     "\n",
     "### Other Bootcamps\n",
     "The contents of this Bootcamp originates from [OpenACC GPU Bootcamp Github](https://github.com/gpuhackathons-org/gpubootcamp).  Here are some addional Bootcamp which might of interest: \n",
@@ -408,7 +408,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
