correction on links

--- a/ai/Megatron/English/Python/Start_Here.ipynb
+++ b/ai/Megatron/English/Python/Start_Here.ipynb
@@ -134,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# verify profiling capacility \n",
+    "# verify profiling capability \n",
     "!nsys status -e"
    ]
   },
@@ -142,8 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "Verify Profiling Capability, the expected output should look something simialr to the below\n",
+    "Verify profiling capability, the expected output should look something simialr to the below\n",
     "\n",
     "            Sampling Environment Check\n",
     "            Linux Kernel Paranoid Level = 2: OK\n",
@@ -160,7 +159,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "To start with, we need to create placeholder for dataset. We are going to populate these folders later."
+    "To start with, we need to create folders as placeholders for dataset. We are going to populate these folders later."
    ]
   },
   {
@@ -225,7 +224,7 @@
     "\n",
     "Basic understanding on Deep learning and Pytorch is required, if you are new to Deep learning and or new to Pytorch, it is recommended to go through the [Distributed_Deep_Learning bootcamp](https://github.com/gpuhackathons-org/gpubootcamp/tree/master/ai/Distributed_Deep_Learning/English/python) and [Pytorch tutorials](https://pytorch.org/tutorials/) as prior.\n",
     " \n",
-    "**Disclaimer** : All the results mentioned in the notebooks were tested on a *DGX-2 machine equipped with 2 or 4 or 8 x A100 connected via NVLink*. The results would vary when using different hardware and would also depend on the Interconnect bandwidth and the thermal conditions of the machine."
+    "**Disclaimer** : All the results mentioned in the notebooks were tested on a *DGX-2 machine equipped with 2 x A100 GPUs connected via NVLink*. The results would vary when using different hardware and would also depend on the Interconnect bandwidth and the thermal conditions of the machine."
    ]
   },
   {
